# utoipa_sample

./: Cargo.toml  README.md
src/: api.rs  domain.rs  infra.rs  main.rs  usecase.rs
src/api/: composition.rs  execute.rs  openapi.rs  request.rs  response.rs  route.rs
src/api/route/: check_health.rs  post_tweet.rs  register_user.rs  tweets.rs  user.rs
src/api/route/tweets/: get_all_tweets.rs
src/api/route/user/: search_user.rs
src/domain/: tweet.rs  user.rs
src/infra/: tweet.rs  user.rs
src/usecase/: get_all_tweets.rs  post_tweet.rs  register_user.rs  search_user.rs
