[package]
name = "utoipa_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
anyhow = "1.0.66"
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.148", features = ["serde_derive", "derive"] }
ulid = { version = "1.0.0", features = ["serde"] }
